# utiman

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.codereview/agents/web/: index.yaml
.codereview/agents/web/frontend/: index.yaml  prompt.md
.github/workflows/: ci.yml  release.yml
catalog/: fpl.toml  lrfl.toml  tojfl.toml  xfin.toml
docs/: manifests.md
src/: anomaly.rs  archive.rs  check.rs  dates.rs  detect.rs  export.rs  extract.rs  install.rs  main.rs  manifest.rs  pending.rs  remind.rs  runner.rs  server.rs  snapshots.rs  summary.rs
src/assets/: app.js  charts.js  index.html  style.css
