[package]
name = "utiman"
version = "0.1.0"
edition = "2021"
description = "Local utility-account manager: one dashboard over your utility-provider CLIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/piekstra/utiman"
keywords = ["utilities", "dashboard", "cli", "billing"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
# Family self-update (same crate the managed CLIs use), so utiman updates
# itself from its GitHub releases: piekstra-cli/1 `self-update`.
pk-cli-selfupdate = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
toml = "0.8"
which = "7"

[profile.release]
strip = true
lto = "thin"
